    (Ashish Thusoo through zshao)

    HIVE-98. Dependency management with hadoop core using ivy.
    (Ashish Thusoo through zshao)

    HIVE-73. Thrift Server and Client for Hive (Raghu through zshao)

    HIVE-113. Distribute by and sort by support. (zshao)

    HIVE-118. Add date related functions. (zshao)

    HIVE-62. Support nested types.
    (Ashish Thusoo via dhruba)

  IMPROVEMENTS

    HIVE-126. Don't fetch information on Partitions from HDFS instead of
    MetaStore.  (Johan Oskarsson via zshao)

    HIVE-209. Enabling asserts in tests. (Prasad Chakka via zshao)

    HIVE-177. Allow specifying custom input and output format in CREATE TABLE.
    (David Phillips via zshao)

    HIVE-166. Create eclipse project template. (Ashish Thusoo via zshao)

    HIVE-186. Refactor code to use a single graph, nodeprocessor, dispatcher
    and rule abstraction. (Ashish Thusoo via zshao)

    HIVE-182. Add database name parameter to getTable and dropTable.
    (Johan Oskarsson via zshao)

    HIVE-181. Restore UDFTestLength unit test for UDFs.
    (David Phillips via zshao)

    HIVE-107. Case structure for bin/hive. (Edward Capriolo via zshao)

    HIVE-101. Set svn:ignore for the root. (Johan Oskarsson via zshao)

    HIVE-170. Map-side aggregations to estimate memory size. (Namit via zshao)

    HIVE-180. Data Generator for thrift-serialized sequence files. (zshao)

    HIVE-157. Update README.txt to remove refs to mirror.facebook.com. (zshao)

    HIVE-95. Improve cli error messages by lowering backtracking to 1.
    (Pete Wyckoff through zshao)

    HIVE-102. Refactor DDLTask. (Johan Oskarsson through zshao)

    HIVE-85. New compression options for Hive. (Joydeep Sarma through zshao)

    HIVE-69. genMapRedTasks uses tree walker. (Namit through zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-235. Fixed DynamicSerDe to work with null values with Thrift
    Protocols that can have missing fields for null values. (zshao)
