@@ -6,7 +6,9 @@ CREATE TABLE table1 (a STRING, b STRING) STORED AS TEXTFILE;
 DESCRIBE table1;
 DESCRIBE EXTENDED table1;
 
-CREATE TABLE table2 (a STRING, b INT) STORED AS TEXTFILE;
+CREATE TABLE IF NOT EXISTS table1 (a STRING, b STRING) STORED AS TEXTFILE;
+
+CREATE TABLE IF NOT EXISTS table2 (a STRING, b INT) STORED AS TEXTFILE;
 DESCRIBE table2;
 DESCRIBE EXTENDED table2;
 
